Updated static styling and upload page

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,12 +2,16 @@
 <html>
 <head>
     <title>Upload PDF</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h2>Upload Your PDF</h2>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-        <input type="file" name="pdf_file" required>
-        <button type="submit">Upload</button>
-    </form>
+    <div class="container">
+        <h2>Upload Your PDF</h2>
+        <form action="/upload" method="POST" enctype="multipart/form-data">
+            <input type="file" name="pdf_file" required>
+            <br>
+            <button type="submit">Upload</button>
+        </form>
+    </div>
 </body>
 </html>
